miscellaneous/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  labels:
    app: grafana
  annotations:
    cert-manager.io/cluster-issuer: "cluster-letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafanacyber.ddns.net
    secretName: grafana-tls
  rules:
  - host: grafanacyber.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: watcher-grafana
            port:
              number: 80
